--- a/index.html
+++ b/index.html
@@ -1,6 +1,27 @@
 <html>
 <body>
-i m bjl
-<img id="logo" src="taiyang.jpg"/>
+
+
+    这是五个字
+
+
+
+
+
+<script src="jquery-3.4.1.js"></script>
+<script src="jssor.slider.min.js"></script>
+<link  href="/my.css" rel="stylesheet"type="text/css" />
+<script>
+    jQuery(document).ready(function ($) {
+        var options = { $AutoPlay: 1 };
+        var jssor1_slider = new $JssorSlider$("jssor_1", options);
+    });
+</script>
+<div id="jssor_1">
+    <div data-u="slides" style="position:absolute;top:0px;left:0px;width:980px;height:380px;overflow:hidden;">
+        <div><img data-u="image" src="taiyang.jpg" /></div>
+        <div><img data-u="image" src="xiaomao.jpg" /></div>
+    </div>
+</div>
 </body>
 </html>
